<resources>
    <string name="app_name">Simple Reservation APP</string>
    <string name="nombreApp">Simple Reservation APP</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="btn_empezar">Empezar</string>
    <string name="btn_registar">Registar</string>
    <string name="btn_logear">Ingresar</string>
    <string name="btn_reservar">Reservar</string>
    <string name="btn_verReservas">Reservas Realizadas</string>
    <string name="btn_Salir">Salir</string>
    <string name="btn_Detalles_Reservas">Detalles Reserva</string>
    <string name="menu_reservar">Reservar</string>
    <string name="menu_reservas">Reservas</string>
    <string name="menu_salir">Salir</string>
    <string name="username_hint">Usuario</string>
    <string name="pass_hint">Contraseña</string>
    <string name="login">Login</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="compartir">Compartir Por Correo</string>
    <string name="compartir_telefono">Enviar por Celular</string>
    <string name="txt_lista_reservas">Lista Reservas</string>
    <string name="txt_detalles_reserva">Detalles Reserva</string>
    <string name="txt_id_Reserva">Id Reserva</string>
    <string name="txt_fecha">Fecha de Reserva</string>
    <string name="txt_fecha_ini">Fecha de Inicio</string>
    <string name="txt_fecha_fin">Fecha de Fin</string>
    <string name="txt_id_Lugar">Id Lugar</string>
    <string name="txt_hora_ini">Hora de Inicio</string>
    <string name="txt_hora_fin">Hora de Fin</string>
    <string name="txt_TituloReserva">Reservar</string>
    <string name="txt_RidLugar">Id Lugar</string>
    <string name="txt_RidUsuario">Id Usuario</string>
    <string name="txt_RFechaIni">Fecha Inicio</string>
    <string name="txt_RFechaFin">Fecha Fin</string>
    <string name="txt_RHoraIni">Hora Inicio</string>
    <string name="txt_RHoraFin">Hora Fin</string>
    <string name="txt_REstado">Estado</string>
    <string name="editText_RidLugar">Id Lugar</string>
    <string name="editText_RidUsuario">Id Usuario</string>
    <string name="fechaini_hint">Fecha Inicio</string>
    <string name="fechafin_hint">Fecha Fin</string>
    <string name="horaini_hint">Hora Inicio</string>
    <string name="horafin_hint">Hora Fin</string>
    <string name="switch_Label">Reservado</string>
    <string name="btn_HacerReserva">Hacer Reserva</string>
    <string name="busquedaMapa">Buscar, Universidad, Cine, Parque</string>
    <string name="txt_ETituloReserva">Editar Reserva</string>
    <string name="txt_ERidLugar">Id Lugar</string>
    <string name="txt_ERidUsuario">Id Usuario</string>
    <string name="txt_ERFechaIni">Fecha Inicio</string>
    <string name="txt_ERFechaFin">Fecha Fin</string>
    <string name="txt_ERHoraIni">Hora Inicio</string>
    <string name="txt_ERHoraFin">Hora Fin</string>
    <string name="txt_EREstado">Estado</string>
    <string name="editText_ERidLugar">Id Lugar</string>
    <string name="editText_ERidUsuario">Id Usuario</string>
    <string name="fechaini_Ehint">Fecha Inicio</string>
    <string name="fechafin_Ehint">Fecha Fin</string>
    <string name="horaini_Ehint">Hora Inicio</string>
    <string name="horafin_Ehint">Hora Fin</string>
    <string name="switch_ELabel">Reservado</string>
    <string name="btn_EHacerReserva">Guardar Cambios</string>

    <string name="txt_TituloT">Compartir Vía Celular</string>
    <string name="txt_nombreContacto">Nombre Contacto</string>
    <string name="txt_numeroContacto">Número Contacto</string>
    <string name="txt_horainiT">Hora de Inicio</string>
    <string name="txt_horafinT">Hora de Fin</string>
    <string name="txt_reservaIdT">Reserva ID</string>
    <string name="button_invitarT">Enviar Invitación</string>

    <string name="editText_nombreContacto">Nombre Contacto</string>
    <string name="editText_numeroContacto">Número Contacto</string>
    <string name="editText_horainiT">Hora de Inicio</string>
    <string name="editText_horafinT">Hora de Fin</string>
    <string name="editText_reservaIdT">Reserva ID</string>




    <string name="title_activity_google_maps">Reserva</string>
</resources>
