<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservas.CrearReservaActivity">

    <TextView
        android:id="@+id/txt_TituloReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_TituloReserva"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_RIdLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_RidLugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_TituloReserva" />

    <TextView
        android:id="@+id/txt_RIdUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_RidUsuario"
        app:layout_constraintEnd_toEndOf="@+id/txt_RIdLugar"
        app:layout_constraintStart_toStartOf="@+id/txt_RIdLugar"
        app:layout_constraintTop_toBottomOf="@+id/txt_RIdLugar" />

    <TextView
        android:id="@+id/editTextRidUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/editText_RidUsuario"
        app:layout_constraintBottom_toBottomOf="@+id/txt_RIdUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_RIdUsuario"
        app:layout_constraintTop_toTopOf="@+id/txt_RIdUsuario" />

    <TextView
        android:id="@+id/editTextRidLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/editText_RidLugar"
        app:layout_constraintBottom_toBottomOf="@+id/txt_RIdLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/txt_RIdLugar"
        app:layout_constraintTop_toTopOf="@+id/txt_RIdLugar" />

    <TextView
        android:id="@+id/txt_RFechaIni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_RFechaIni"
        app:layout_constraintEnd_toEndOf="@+id/txt_RIdUsuario"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/txt_RIdUsuario"
        app:layout_constraintTop_toBottomOf="@+id/txt_RIdUsuario" />

    <TextView
        android:id="@+id/txt_RFechaFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_RFechaFin"
        app:layout_constraintEnd_toEndOf="@+id/txt_RFechaIni"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_RFechaIni"
        app:layout_constraintTop_toBottomOf="@+id/txt_RFechaIni" />

    <TextView
        android:id="@+id/txt_RHoraIni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_RHoraIni"
        app:layout_constraintEnd_toEndOf="@+id/txt_RFechaFin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_RFechaFin"
        app:layout_constraintTop_toBottomOf="@+id/txt_RFechaFin" />

    <TextView
        android:id="@+id/txt_RHora_Fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_RHoraFin"
        app:layout_constraintEnd_toEndOf="@+id/txt_RHoraIni"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_RHoraIni"
        app:layout_constraintTop_toBottomOf="@+id/txt_RHoraIni" />

    <TextView
        android:id="@+id/txt_REstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_REstado"
        app:layout_constraintEnd_toEndOf="@+id/txt_RHora_Fin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_RHora_Fin"
        app:layout_constraintTop_toBottomOf="@+id/txt_RHora_Fin" />

    <Switch
        android:id="@+id/switchEstadoReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:text="@string/switch_Label"
        app:layout_constraintBottom_toBottomOf="@+id/txt_REstado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_REstado"
        app:layout_constraintTop_toTopOf="@+id/txt_REstado"
        tools:checked="false" />

    <EditText
        android:id="@+id/editTextFechaIni"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fechaini_hint"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_RFechaIni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/txt_RFechaIni"
        app:layout_constraintTop_toTopOf="@+id/txt_RFechaIni"
        app:layout_constraintVertical_bias="0.625" />

    <EditText
        android:id="@+id/editTextFechaFin"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fechafin_hint"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_RFechaFin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/txt_RFechaFin"
        app:layout_constraintTop_toTopOf="@+id/txt_RFechaFin"
        app:layout_constraintVertical_bias="0.625" />

    <EditText
        android:id="@+id/editTextHoraIni"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/horaini_hint"
        android:inputType="time"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_RHoraIni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toEndOf="@+id/txt_RHoraIni"
        app:layout_constraintTop_toTopOf="@+id/txt_RHoraIni"
        app:layout_constraintVertical_bias="0.708" />

    <EditText
        android:id="@+id/editTextHoraFin"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/horafin_hint"
        android:inputType="time"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_RHora_Fin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_RHora_Fin"
        app:layout_constraintTop_toTopOf="@+id/txt_RHora_Fin" />

    <Button
        android:id="@+id/btn_hacerReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/btn_HacerReserva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_REstado"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>