<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Usuario.UsuarioLoggedActivity">

    <Button
        android:id="@+id/btn_reservar"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/btn_reservar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reservas"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/btn_verReservas"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_reservar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_reservar"
        app:layout_constraintTop_toBottomOf="@+id/btn_reservar" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/btn_Salir"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_reservas"
        app:layout_constraintStart_toStartOf="@+id/btn_reservas"
        app:layout_constraintTop_toBottomOf="@+id/btn_reservas" />
</android.support.constraint.ConstraintLayout>